--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
     "@distube/ytsr": "^2.0.4",
+    "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.13.2",
+    "chalk": "^5.6.2",
     "chokidar": "^4.0.3",
     "discord.js": "^14.24.2",
     "distube": "^5.0.7",
