--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.2.3",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.3.0",
+    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "play-dl": "^1.9.7",
     "ytdl-core": "^4.11.5"
