--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@discordjs/builders": "^1.13.0",
+    "@discordjs/rest": "^2.6.0",
     "@discordjs/voice": "^0.18.0",
     "@distube/ytsr": "^2.0.4",
     "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.13.2",
     "chalk": "^5.6.2",
     "chokidar": "^4.0.3",
+    "discord-api-types": "^0.38.33",
     "discord.js": "^14.24.2",
     "distube": "^5.0.7",
     "dotenv": "^17.2.3",
@@ -24,6 +27,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "play-dl": "^1.9.7",
+    "pm2": "^6.0.13",
     "ytdl-core": "^4.11.5"
   }
 }
