--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^14.24.2",
     "distube": "^5.0.7",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.3.0",
