--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/builders": "^1.13.0",
     "@discordjs/rest": "^2.6.0",
     "@discordjs/voice": "^0.18.0",
+    "@distube/yt-dlp": "^2.0.1",
     "@distube/ytsr": "^2.0.4",
     "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.13.2",
@@ -26,8 +27,10 @@
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^5.3.0",
+    "libsodium-wrappers": "^0.7.15",
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
+    "opusscript": "^0.0.8",
     "play-dl": "^1.9.7",
     "pm2": "^6.0.13",
     "ytdl-core": "^4.11.5"
