--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "opusscript": "^0.0.8",
+    "pdfkit": "^0.17.2",
     "play-dl": "^1.9.7",
     "pm2": "^6.0.13",
     "ytdl-core": "^4.11.5"
